<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--App name-->
    <string name="app_name" translatable="false">ProjectX</string>

    <!--Hints-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="resetPass" translatable="false">Enter your username</string>
    <string name="resetpass1" translatable="false">Enter registered email</string>

    <!--TextViews-->
    <string name="greeting">Welcome! </string>
    <string name="forgetPassword">Forget Password? </string>
    <string name="noAccount">Don\'t have an Account yet? </string>
    <string name="haveAccount">Already have an account? </string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="reset">Reset Here</string>
    <string name="forgotUsername">Don\'t remember username?</string>
    <string name="enterEmail">Enter email</string>

    <!--Buttons-->
    <string name="loginBtn">Log In</string>
    <string name="signupBtn">Sign Up</string>
    <string name="getStarted">Get Started</string>
    <string name="submit">Submit</string>
    <string name="resetPasswordBtn">Reset Password</string>

    <!--toast-->
    <string name="fields_empty_error">Fields should not be empty</string>

    <!--Error-->
    <string name="username_empty_error">*please enter the username</string>
    <string name="email_empty_error">*please enter the email</string>
    <string name="password_empty_error">*please enter the password</string>
    <string name="confirm_password_empty_error">*please enter the confirm password</string>


    <!--for long press shortcut menu -->
    <string name="shortcut_request">Please give us a chance to improvise</string>
    <string name="request">request</string>
    <string name="navigate_main">MainActivity</string>
    <string name="navigate_login">LoginActivity</string>

    <!--for bottom menu -->
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>